# snapflow-shopify

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements.txt  test.py
.github/workflows/: snapflow-shopify.yml
dags_shopify/: __init__.py
dags_shopify/pipes/: extract_shopify_orders.py
dags_shopify/schemas/: shopify_order.yml
snapflow_shopify/: __init__.py
snapflow_shopify/functions/: import_orders.py
snapflow_shopify/pipes/: extract_orders.py
snapflow_shopify/schemas/: shopify_order.yml
snapflow_shopify/snaps/: extract_orders.py  import_orders.py
tests/: test_shopify.py
